--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -4,11 +4,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-Las primeras preguntas que se pueden plantear son ¿qué es un fractal? ¿Qué tienen de especial estas figuras? ¿Qué las diferencia de un objeto no fractal? ¿Por qué es necesaria una geometría fractal? Trataremos de responder a cada una de estas preguntas a lo largo de este capítulo, comenzando por la primera de ellas. En realidad, hay distintas definiciones de \textit{fractal}, pero todas utilizan dos conceptos como base: la \textbf{autosimilaridad} y la \textbf{dimensión}. La primera de ellas es más cercana para nosotros de lo que en un principio podemos pensar, fijémonos en los ejemplos de la imagen \ref{fig:objetos}. 
+Las primeras preguntas que se pueden plantear son ¿qué es un fractal? ¿Qué tienen de especial estas figuras? ¿Qué las diferencia de un objeto no fractal? Trataremos de responder a cada una de estas preguntas a lo largo de este capítulo, comenzando por la primera de ellas. En realidad, hay distintas definiciones de \textit{fractal}, pero todas utilizan dos conceptos como base: la \textbf{autosimilaridad} y la \textbf{dimensión}. La primera de ellas es más cercana para nosotros de lo que en un principio podemos pensar, fijémonos en los ejemplos de la imagen \ref{fig:objetos}. 
 
 \begin{figure}[ht]
+  \centering
 \begin{tabular}{cc}
-  \includegraphics[scale=0.225]{./img/romanescu.jpg} &   \includegraphics[scale=0.2]{./img/rayo.jpg} \\
+  \includegraphics[width=7cm]{./img/C1/romanescu.jpg} &   \includegraphics[width=7cm]{./img/C1/rayo.jpg} \\
 (a) Romanescu & (b) Rayo \\[6pt]
 \end{tabular}
 \caption{Objetos de la naturaleza con estructura fractal}
@@ -47,7 +48,7 @@ Creado por el célebre matemático \textit{George Cantor}, este fractal se const
 
 \item Aplicamos el mismo proceso a los intervalos $\left[0,\frac 1 3\right]$ y $\left[\frac 2 3, 1\right]$. Esto es, se dividen ambos en tres partes iguales y se extrae el intervalo abierto central de cada uno de ellos, manteniendo los extremos. En este caso obtendríamos $4=2^2$ intervalos iguales, cada uno de ellos a escala $\frac 1 3$ de los dos obtenidos en el primer paso y a escala $\frac 1 9=\left(\frac 1 3\right)^2$ del original.
 
-\item Repetimos este proceso de manera indefinida, de manera que en el $n$-ésimo paso se obtendrían $2^n$ intervalos a escala $\left(\frac 1 3\right)^n$. Denotemos como $C_n$ al conjunto unión de los $2^n$ intervalos que se generan en el paso $n$ del proceso.
+\item Repetimos este proceso de manera indefinida, de manera que en el $n$-ésimo paso se obtendrían $2^n$ intervalos a escala $\left(\frac 1 3\right)^n$ del original. Denotemos como $C_n$ al conjunto unión de los $2^n$ intervalos que se generan en el paso $n$ del proceso.
 \end{enumerate} 
 
 Los puntos del intervalo inicial $[0,1]$ que restan tras las infinitas iteraciones son los que conforman el \textit{conjunto de Cantor}, que denotamos con $\mathbf{C}$, de forma que 
@@ -56,7 +57,7 @@ $$\mathbf{C}=\bigcap_{n\in\N}C_n.$$
 
 \begin{figure} [ht]
 \centering
-\includegraphics[scale = 0.6]{img/cantor.png}
+\includegraphics[scale = 0.6]{img/C1/cantor.png}
 \caption{Iteraciones del proceso de generación del conjunto de Cantor}
  \label{fig:Cantor}
 \end{figure}
@@ -95,7 +96,7 @@ La figura a la que converge este proceso infinito se conoce como triángulo \tex
 
 \begin{figure} [ht]
 \centering
-\includegraphics[scale = 0.6]{img/Sierpinski-triangle.png}
+\includegraphics[scale = 0.6]{img/C1/Sierpinski-triangle.png}
 \caption{Generación del triángulo de Sierpinski}
  \label{fig:triangulo-Sierpinski}
 \end{figure}
@@ -119,7 +120,7 @@ El propio Sierpinski se dio cuenta que con el mismo patrón utilizado para gener
 
 \begin{figure} [ht]
 \centering
-\includegraphics[scale = 0.6]{img/Sierpinski-carpet.png}
+\includegraphics[scale = 0.6]{img/C1/Sierpinski-carpet.png}
 \caption{Generación de la alfombra de Sierpinski}
  \label{fig:alfombra-Sierpinski}
 \end{figure}
@@ -128,7 +129,7 @@ Este proceso también se puede modelar en 3D, obteniendo así la conocida como e
 
 \begin{figure} [ht]
 \centering
-\includegraphics[scale = 0.6]{img/esponja_menger.png}
+\includegraphics[scale = 0.6]{img/C1/esponja_menger.png}
 \caption{Esponja de Menger}
  \label{fig:esponja-menger}
 \end{figure}
@@ -150,7 +151,7 @@ El resultado final del proceso es lo que llamamos la \textit{curva de Koch}, que
 
 \begin{figure} [ht]
 \centering
-\includegraphics[scale = 0.5]{img/curva-Koch.png}
+\includegraphics[scale = 0.5]{img/C1/curva-Koch.png}
 \caption{Iteraciones del proceso de generación de la curva de Koch}
  \label{fig:curva-Koch}
 \end{figure}
@@ -163,7 +164,7 @@ A partir de la curva de Koch podemos generar un objeto matemático muy particula
 
 \begin{figure} [ht]
 \centering
-\includegraphics[scale = 0.6]{img/copo-Koch.png}
+\includegraphics[scale = 0.6]{img/C1/copo-Koch.png}
 \caption{Generación del copo de nieve de Koch}
 \label{fig:copo-Koch}
 \end{figure}
@@ -172,7 +173,7 @@ Esta curva posee la particularidad de tener longitud infinita y a su vez encerra
 
 \begin{figure} [ht]
 \centering
-\includegraphics[scale = 0.2]{img/copo-Koch-colores.png}
+\includegraphics[scale = 0.2]{img/C1/copo-Koch-colores.png}
 \caption{Curvas de Koch que componen el copo de Koch}
 \label{fig:copo-Koch-colores}
 \end{figure}
@@ -183,14 +184,14 @@ Esta curva posee la particularidad de tener longitud infinita y a su vez encerra
 
 Al iniciar este capítulo mencionamos que las distintas definiciones de fractal utilizaban los conceptos de autosimilaridad y dimensión. Con los distintos ejemplos hemos entendido el primero de ellos, por lo que es momento de abordar el concepto de dimensión. 
 
-El concepto de dimensión más clara que tenemos es el de dimensión algebraica, esto es, la dimensión de un espacio vectorial. Sabemos que un espacio vectorial $V$ se dice que tiene $\dim(V)=n$, con $n\in\N$, si, y solo si existe una base de $V$ constituida por $n$ vectores, de forma que cualquier elemento de $V$ puede ser expresado de forma única como una combinación lineal de los $n$ vectores de la base. Otra manera de ver esto es que para construir los vectores de $V$ tenemos hasta $n$ parámetros de libertad, esto es, $v=a_1 v_1 +\cdots a_n v_n \ \ \forall v\in V$, donde $\{v_1,\dots,v_n\}$ es una base de $V$ y $a_1,\dots,a_n\in \K$ siendo $\K$ el cuerpo sobre el que está construido el espacio vectorial.
+El concepto de dimensión más claro que tenemos es el de dimensión algebraica, esto es, la dimensión de un espacio vectorial. Sabemos que un espacio vectorial $V$ se dice que tiene $\dim(V)=n$, con $n\in\N$, si, y solo si existe una base de $V$ constituida por $n$ vectores, de forma que cualquier elemento de $V$ puede ser expresado de forma única como una combinación lineal de los $n$ vectores de la base. Otra manera de ver esto es que para construir los vectores de $V$ tenemos hasta $n$ parámetros de libertad, esto es, $v=a_1 v_1 +\cdots a_n v_n \ \ \forall v\in V$, donde $\{v_1,\dots,v_n\}$ es una base de $V$ y $a_1,\dots,a_n\in \K$ siendo $\K$ el cuerpo sobre el que está construido el espacio vectorial.
 
 En el caso de subconjuntos de $\R^n$ como puede ser una curva parametrizada, si seguimos la analogía del número de parámetros que define un punto en este caso de una curva, podemos decir que su dimensión es $1$, ya que un punto de una curva parametrizada puede expresarse en función de un único parámetro. La variación de este parámetro nos daría otro punto de la curva, por lo que podemos decir que un punto puede moverse por la curva con un grado de libertad (ver imagen \ref{fig:curva-superficie} (a)). Por su lado, una superficie regular de $\R^3$ puede localmente ser expresada como la imagen de una parametrización que depende de dos variables y la variación de estas mediante dicha parametrización resulta en otro punto de la superficie, pudiendo expresar esto como que un punto de una superficie regular tiene dos grados de libertad, lo que intuitivamente permite afirmar que una superficie regular tiene dimensión $2$ (ver imagen \ref{fig:curva-superficie} (b)).
 
 \begin{figure}[ht]
 \centering
 \begin{tabular}{cc}
-  \includegraphics[scale=0.3]{./img/circunferencia.png} &   \includegraphics[scale=0.5]{./img/esfera.png} \\
+  \includegraphics[scale=0.3]{./img/C1/circunferencia.png} &   \includegraphics[scale=0.5]{./img/C1/esfera.png} \\
 (a) En una curva de $\R^2$ & (b) En una superficie de $\R^3$ \\[4pt]
 \end{tabular}
 \caption{Posible movimiento de un punto en posibles objetos de $\R^n$}
@@ -207,7 +208,7 @@ Pensemos ahora en un segmento de recta, un cuadrado y un cubo, que son objetos i
 \begin{figure}[ht]
   \centering
 \begin{tabular}{ccc}
-  \includegraphics[scale=0.15]{./img/linea-dividida.png} &   \includegraphics[scale=0.15]{./img/cuadrado-dividido.png} & \includegraphics[scale=0.2]{./img/cubo-dividido.png}\\
+  \includegraphics[scale=0.15]{./img/C1/linea-dividida.png} &   \includegraphics[scale=0.15]{./img/C1/cuadrado-dividido.png} & \includegraphics[scale=0.2]{./img/C1/cubo-dividido.png}\\
 (a) 2 segmentos & (b) 4 cuadrados & (c) 8 cubos \\[4pt]
 \end{tabular}
 \caption{Segmento, cuadrado y cubo recubierpos por objetos de lado $\frac 1 2$}
@@ -259,15 +260,16 @@ $$
 donde $m_1,\dots,m_n$ son enteros, tendríamos $\R^n$ dividido en cuadrados de $\R^n$ de lado $\delta$, comúnmente conocidos como `cajas', de diámetro $\delta\sqrt{n}$ y contando el número de cajas que recubren a $A$, obtenemos el mismo resultado, puede comprobarse en \cite[sección 3.1]{Falconer}.
 
 \begin{figure}[ht]
+  \centering
 \begin{tabular}{cc}
-\includegraphics[scale=0.17]{./img/cajas-grandes.png} &   \includegraphics[scale=0.17]{./img/cajas-peques.png} \\
+\includegraphics[scale=0.17]{./img/C1/cajas-grandes.png} &   \includegraphics[scale=0.17]{./img/C1/cajas-peques.png} \\
 \end{tabular}
 \caption{Una forma de calcular la dimensión por cajas de la curva de Koch}
 \label{fig:dim-cajas}
 \end{figure}
 
 \begin{wrapfigure}{l}{0cm}
-\includegraphics[scale=0.14, trim={0cm 0.35cm 0cm 0.5cm}, clip]{./img/triangulo-dividido.png}
+\includegraphics[scale=0.14, trim={0cm 0.35cm 0cm 0.5cm}, clip]{./img/C1/triangulo-dividido.png}
 \end{wrapfigure}
 Un ejemplo clarificador podría ser el de un triángulo equilátero $T$ de lado 1, el cual podemos recubrir con 4 triángulos equiláteros de lado $\frac 1 2$. A su vez podríamos recubrir estos 4 triángulos con otros 4 triángulos de lado $\frac{1}{4}$, obteniendo así un recubrimiento de $T$ con $16=2^{2\cdot 2}$ triángulos de lado $\frac{1}{4}=\frac{1}{2^2}$. Si repetimos este proceso y teniendo en cuenta que el diámetro de un triángulo equilátero es la longitud de sus lados, podemos tomar $\delta=\frac{1}{2^n}$ y recubrir $T$ con $N_\delta(T)=2^{2n}$ triángulos equiláteros. Aplicando (\ref{eq:dim-cajas}), tenemos por tanto que
 $$
@@ -370,8 +372,9 @@ Por último estudiaremos un concepto de dimensión aplicable a espacios topológ
 \end{enumerate}
 
 \begin{figure}[ht]
+  \centering
 \begin{tabular}{cc}
-\includegraphics[scale=0.5]{./img/ejemplo-dimension-1.png} &   \includegraphics[scale=0.45]{./img/ejemplo-dimension-2.png} \\
+\includegraphics[scale=0.55]{./img/C1/ejemplo-dimension-1.png} &   \includegraphics[scale=0.45]{./img/C1/ejemplo-dimension-2.png} \\
 (a) Ejemplo con $X=\{p\}$ & (b) Ejemplo con $X=r$ \\[6pt]
 \end{tabular}
 \caption{Figuras representativas de los ejemplos}
@@ -382,7 +385,7 @@ Por último estudiaremos un concepto de dimensión aplicable a espacios topológ
 \begin{ejemplo}
 \label{ej:dimension-1}
 (Véase imagen \ref{fig:ejemplos} (a))
-En $\R^2$ dotado de la topología usual consideramos un punto $p$ cualquiera y el espacio topológico $X=\{p\}$. Por tanto la topología inducida por la topología usual $\tau$ en $X$ es $\tau_X=\{X,\emptyset\}$. Sea $V$ un abierto de $\R^2$ que contenga a $p$, por tanto $\tilde{V} = V \cap X = \{p\}$ es un abierto en $X$ que contiene a $p$. Podemos encontrar entonces un abierto $U=\{p\}$ de $X$ tal que su frontera $\partial(U)=\emptyset$ y además $p\in U \subseteq V$. Por tanto concluimos que $X$ tiene dimensión 0.
+En $\R^2$ dotado de la topología usual consideramos un punto $p$ cualquiera y el espacio topológico $X=\{p\}$. Por tanto la topología inducida por la topología usual $\tau$ en $X$ es $\tau_X=\{X,\emptyset\}$. Sea $V$ un abierto de $\R^2$ que contenga a $p$, por tanto $\tilde{V} = V \cap X = \{p\}$ es un abierto en $X$ que contiene a $p$. Podemos encontrar entonces un abierto $U=\{p\}$ de $X$ tal que su frontera $\partial(U)=\emptyset$ y además $p\in U \subseteq \tilde V$. Por tanto concluimos que $X$ tiene dimensión 0.
 \end{ejemplo}
 
 \begin{ejemplo}
